--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </section>
 
         <section data-background-color="white">
-          <h3>You can also go to far with implementing reusable components</h3>
+          <h3>You can also go too far with implementing reusable components</h3>
           <p class="fragment roll-in">
             You can propagate the models from the application to the
             <a
