--- a/index.html
+++ b/index.html
@@ -235,16 +235,14 @@
             <a
               href="https://ui5.sap.com/#/api/sap.ui.core.Component"
               target="_blank"
-              >sap.ui.core.Component</a
-            >
+              >sap.ui.core.UIComponent</a>
           </p>
-          <p class="fragment">or</p>
+          <p class="fragment">which extends</p>
           <p class="fragment">
             <a
               href="https://ui5.sap.com/#/api/sap.ui.core.UIComponent"
               target="_blank"
-              >sap.ui.core.UIComponent</a
-            >
+              >sap.ui.core.Component</a>
           </p>
         </section>
 
