Added github repo's + pdf version

--- a/index.html
+++ b/index.html
@@ -374,6 +374,18 @@
           </p>
         </section>
 
+        <section data-background-color="white">
+          <h3>GitHub Repositories:</h3>
+          <ul>
+            <li><a href="https://github.com/rpanneel/ui5-rpan-lib">Component Library (including attachmentManager)</a></li>
+            <li><a href="https://github.com/rpanneel/ui5-products-legacy">Routing in Nested Components in UI5 1.60 (Products Component)</a></li>
+            <li><a href="https://github.com/rpanneel/ui5-supplier-legacy">Routing in Nested Components in UI5 1.60 (Suppliers Component)</a></li>
+            <li><a href="https://github.com/rpanneel/ui5-products">Routing in Nested Components from UI5 1.72 (Products Component)</a></li>
+            <li><a href="https://github.com/rpanneel/ui5-suppliers">Routing in Nested Components from UI5 1.72 (Suppliers Component)</a></li>
+            <li><a href="https://github.com/rpanneel/ui5-nested-components">Routing in Nested Components from UI5 1.72 (Nested Component)</a></li>
+          </ul>
+        </section>
+
         <section data-background-color="#000">
           <div class="ui5con-thankyou ui5con-orange">Thank you!</div>
           <div class="ui5con-logo"></div>
